--- a/index.html
+++ b/index.html
@@ -490,12 +490,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#00739C"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#00739C" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
                             </a>
                         </div>
                         <div class="swiper-slide ms-news-card">
@@ -510,12 +511,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#00739C"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#00739C" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
                             </a>
                         </div>
                         <div class="swiper-slide ms-news-card">
@@ -530,12 +532,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#00739C"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#00739C" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
                             </a>
                         </div>
                         <div class="swiper-slide ms-news-card">
@@ -550,26 +553,27 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#00739C"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#00739C" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
                             </a>
                         </div>
                     </div>
                     <div class="swiper-main-news-pagination ms-swiper-pagination"></div>
-                    <div class="swiper-main-news-button-prev ms-swiper-btn ms-swiper-prev"><svg width="81" height="21"
-                            viewBox="0 0 81 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="swiper-main-news-button-prev ms-swiper-btn ms-swiper-prev">
+                        <svg width="81" height="21" viewBox="0 0 81 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M7.07497 17.1L1.64163 11.6667C0.999966 11.025 0.999966 9.97503 1.64163 9.33336L7.07497 3.90002"
                                 stroke="#00739C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
                     <div class="swiper-main-news-button-next ms-swiper-btn ms-swiper-next">
-                        <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M25 34.2L30.4333 28.7667C31.075 28.125 31.075 27.075 30.4333 26.4333L25 21"
+                        <svg width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 14.2L6.43333 8.76667C7.075 8.125 7.075 7.075 6.43333 6.43333L1 1"
                                 stroke="#00739C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
@@ -680,8 +684,8 @@
                         </div>
                     </div>
                     <div class="swiper-main-video-pagination ms-swiper-pagination"></div>
-                    <div class="swiper-main-video-button-prev ms-swiper-btn ms-swiper-prev"><svg width="81" height="21"
-                            viewBox="0 0 81 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="swiper-main-video-button-prev ms-swiper-btn ms-swiper-prev">
+                        <svg width="81" height="21" viewBox="0 0 81 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M7.07497 17.1L1.64163 11.6667C0.999966 11.025 0.999966 9.97503 1.64163 9.33336L7.07497 3.90002"
                                 stroke="#00739C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -691,6 +695,120 @@
                         <svg width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 14.2L6.43333 8.76667C7.075 8.125 7.075 7.075 6.43333 6.43333L1 1"
                                 stroke="#00739C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="ms-section ms-blue-section">
+            <div class="ms-container">
+                <div class="ms-head">
+                    <h2 class="ms-title">מאמרים</h2>
+                    <a href="#" class="ms-title-link">
+                        <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.3125 10L0.8125 0.5M0.8125 0.5H7.3125M0.8125 0.5V6.5" stroke="white" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="swiper-main-articles ms-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/233873a877fd92f484f521528c857da7c8149797.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">מחלקה חדשה נפתחה</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/c94d940178f42b0a9be84e219da060653e7b2402.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">כנס רפואי שנתי</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/c94d940178f42b0a9be84e219da060653e7b2402.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">כנס רפואי שנתי</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-main-news-pagination ms-swiper-pagination"></div>
+                    <div class="swiper-main-news-button-prev ms-swiper-btn ms-swiper-prev">
+                        <svg width="9" height="17" viewBox="0 0 9 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M7.07497 15.0999L1.64163 9.66657C0.999966 9.0249 0.999966 7.9749 1.64163 7.33324L7.07497 1.8999"
+                                stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="swiper-main-news-button-next ms-swiper-btn ms-swiper-next">
+                        <svg width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 14.2L6.43333 8.76667C7.075 8.125 7.075 7.075 6.43333 6.43333L1 1" stroke="white"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
                 </div>
