--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
             </menu>
         </aside>
         <section class="ms-section ms-home-preview">
+            <video autoplay muted loop class="home-preview__video" poster="./img/preview-video-poster.jpg">
+                <source src="./video/preview-video.mp4" type="video/mp4">
+            </video>
             <svg class="ms-home-preview__border" width="100%" height="auto" viewBox="0 0 1440 82" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -193,7 +196,7 @@
             </svg>
             <div class="ms-small-container">
                 <div class="main-points">
-                    <div class="main-points__card ms-card-shadow">
+                    <a href="#" class="main-points__card ms-card-shadow">
                         <svg class="main-points__card-svg" viewBox="0 0 125 123" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <ellipse cx="68.6141" cy="66.746" rx="56.3859" ry="56.2161" fill="#00739C"
@@ -212,8 +215,8 @@
                                 fill="#00739C" />
                         </svg>
                         <span class="ms-normal-bold-font-n">זימון תורים</span>
-                    </div>
-                    <div class="main-points__card ms-card-shadow">
+                    </a>
+                    <a href="#" class="main-points__card ms-card-shadow">
                         <svg class="main-points__card-svg" viewBox="0 0 125 123" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <ellipse cx="68.614" cy="66.746" rx="56.3859" ry="56.2161" fill="#00739C"
@@ -233,8 +236,8 @@
                                 fill="#00739C" />
                         </svg>
                         <span class="ms-normal-bold-font-n">מרפאות ושירותים</span>
-                    </div>
-                    <div class="main-points__card ms-card-shadow">
+                    </a>
+                    <a href="#" class="main-points__card ms-card-shadow">
                         <svg class="main-points__card-svg" viewBox="0 0 125 123" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <ellipse cx="68.614" cy="66.746" rx="56.3859" ry="56.2161" fill="#00739C"
@@ -251,8 +254,8 @@
                                 fill="#00739C" />
                         </svg>
                         <span class="ms-normal-bold-font-n">המומחים שלנו</span>
-                    </div>
-                    <div class="main-points__card ms-card-shadow">
+                    </a>
+                    <a href="#" class="main-points__card ms-card-shadow">
                         <svg class="main-points__card-svg" viewBox="0 0 125 123" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <ellipse cx="68.614" cy="66.746" rx="56.3859" ry="56.2161" fill="#00739C"
@@ -266,7 +269,7 @@
                                 fill="#00739C" />
                         </svg>
                         <span class="ms-normal-bold-font-n">תיק רפואי אישי</span>
-                    </div>
+                    </a>
                 </div>
                 <div class="main-nav">
                     <div class="main-nav__circles">
@@ -490,9 +493,71 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -511,9 +576,29 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/c94d940178f42b0a9be84e219da060653e7b2402.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">כנס רפואי שנתי</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -532,30 +617,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
-                                            stroke-linecap="round" stroke-linejoin="round" />
-                                    </g>
-                                </svg>
-
-                            </a>
-                        </div>
-                        <div class="swiper-slide ms-news-card">
-                            <img src="./img/c94d940178f42b0a9be84e219da060653e7b2402.jpg" alt="new"
-                                class="ms-news-card-img">
-                            <div class="ms-news-card-head">
-                                <h3 class="ms-news-card-title">כנס רפואי שנתי</h3>
-                                <span class="ms-news-card-date">21.04.2025</span>
-                            </div>
-                            <a class="ms-news-card-link" href="#">
-                                לפרטים
-                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
-                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -724,9 +788,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -745,9 +809,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -766,9 +830,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -787,9 +851,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
@@ -814,9 +878,8 @@
                 </div>
             </div>
         </section>
-        <section class="ms-section main-helpful">
-            <svg class="main-helpful__background" width="451" height="307" viewBox="0 0 451 307" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
+        <section class="ms-section main-helpful ms-section-grey">
+            <svg class="main-helpful__background" viewBox="0 0 451 307" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_2235_889" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-38" y="-85" width="489"
                     height="638">
                     <path
@@ -947,6 +1010,15 @@
                     </a>
                 </div>
             </div>
+        </section>
+        <section class="ms-modal video-modal">
+            <button class="ms-modal-close">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
+                    <path
+                        d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                </svg>
+            </button>
+            <iframe src="" frameborder="0"></iframe>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
